Fix file read.